fix tab label overflow

--- a/frontend/src/components/tabs/Tabs.module.scss
+++ b/frontend/src/components/tabs/Tabs.module.scss
@@ -18,6 +18,8 @@
       color: $color-grey;
       margin: 0 $spacing-l;
       overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
     .tabButton {
       flex: 1;
